# MiroClaw

./: .env.example  .gitignore  CLAUDE.md  DECISIONS.md  Dockerfile  PROGRESS.md  README.md  docker-compose.yml  package-lock.json  package.json
backend/: pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py
backend/app/agents/: __init__.py  curator_agent.py  identity.py  memory.py  miroclaw_agent.py  oracle_agent.py  round_orchestrator.py
backend/app/agents/tools/: __init__.py  analytics.py  budget.py  camofox_client.py  curator_tools.py  graph_write.py  oasis_platform.py  (+3 more)
backend/app/api/: __init__.py  analytics.py  graph.py  report.py  simulation.py
backend/app/models/: project.py  task.py
backend/app/services/: __init__.py  graph_builder.py  graph_entity_reader.py  graph_search_tools.py  miroclaw_analytics.py  oasis_profile_generator.py  ontology_generator.py  report_agent.py  simulation_config_generator.py  simulation_graph_updater.py  simulation_ipc.py  simulation_manager.py  simulation_query_tools.py  simulation_runner.py  text_processor.py
backend/app/utils/: __init__.py  file_parser.py  llm_client.py  logger.py  retry.py
backend/scripts/: run_parallel_simulation.py
backend/tests/: conftest.py  test_camofox_integration.py  test_functiontool_wiring.py  test_miroclaw_agents.py  test_ontology_actor_context.py  test_profile_generator_validation.py
backend/tests/local_graph/: conftest.py  test_embedding_service.py  test_entity_extractor.py  test_episode_processor.py  test_graph_service.py  test_models.py  test_neo4j_client.py
(+44 files in other folders)
